test.css
body {
  margin: 0;
  overflow-y: scroll;
  overflow-x: hidden;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
}

html {
  scroll-behavior: smooth;
}

button {
  border: none;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
}

button:hover {
  cursor: pointer;
  background-color: #ff869c;
}

a {
  text-decoration: none;
}

h4 {
  font-weight: bold;
  font-size: 28px;
  line-height: 29px;
  color: #4f5461;
}

.header-image {
  position: absolute;
  top: 0;
  background-color: purple;
  background-image: url(/images/header-back-mobile.jpg);
  height: 550px;
  width: 100%;
  background-repeat: no-repeat;
  background-size: 100%;
  z-index: -100;
}

.wrapper {
  display: grid;
  grid-template-columns: minmax(10px, 1fr) minmax(355px, 10fr) minmax(10px, 1fr);
  grid-template-rows: 100px auto;
  justify-items: center;
  width: 100vw;
  /* height: 100vh; */
  height: 2100px;
  background-image: url(/images/footer-back-mobile.jpg);
  background-repeat: no-repeat;
  background-position: center bottom;
  background-size: 100% 670px;
}

.nav {
  grid-column-start: 2;
  grid-column-end: 3;
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* width: 100%; */
  /* height: 90px; */
}

.container {
  grid-column-start: 2;
  grid-column-end: 3;
  width: 100%;
}

.hidden {
  display: none;
}

/* nav styling  */
.nav {
  display: flex;
  flex-direction: row;
  padding: 0;
  z-index: 1;
  width: 100%;
}
.nav ul {
  list-style: none;
  display: flex;
  flex-direction: row;
}
.nav ul li {
  margin: 0 1px;
}
.nav a {
  font-weight: 500;
  font-size: 20px;
  line-height: 338.5%;
  color: #ffffff;
}

.logo {
  background: #4456fb;
  border-radius: 50%;
  width: 64px;
  height: 64px;
  /* margin: 47px 0 40px 0; */
}
.initials {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 20px;
  line-height: 105.3%;
  color: #ffffff;
  z-index: 100;
  padding: 2px 0 0 18px;
}
.nav-items li {
  margin: 10px 0 10px -60px;
  line-height: 40px;
  list-style: none;
}
.nav-items a {
  font-weight: 500;
  font-size: 16px;
  margin: 0 0 0 20px;
}

/* style content  */

.content {
  font-family: 'Sora', sans-serif;
  font-style: normal;
  font-weight: bold;
  color: #ffffff;
  height: 436px;
}

.icons a img,
a img {
  width: 27px;
  height: 27px;
  margin: 10px 0 0 0;
}

.content .header h1 {
  font-size: 38px;
  line-height: 105%;
}

.header h3 {
  font-size: 19px;
  line-height: 105%;
  margin: 0 0 30px 0;
}

.header p,
.about p,
.footer p {
  font-size: 13px;
  font-weight: normal;
  line-height: 22px;
  /* width: 100%; */
  margin: 0 0 26px 0;
}

.about p,
.footer p {
  color: #4f5461;
}

.social {
  display: block;
  text-align: left;
  font-family: 'Sora', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 20px;
  background-color: #fff;
  color: #4f5461;
  border-radius: 20px;
  padding: 10px 20px;
}

.social-icons {
  display: flex;
  justify-content: space-between;
}

/* style portfolio  */

.portfolio-item {
  width: auto;
  height: 480px;
  border: 1px solid rgba(0, 0, 0, 0.05);
  box-sizing: border-box;
  border-radius: 10px;
  margin: 0 0 150px 0;
}

#proj1 {
  background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0) 98.35%
    ),
    url(./images/Proj1.jpg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

#proj2 {
  background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0) 98.35%
    ),
    url(./images/Proj2.jpg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

#proj3 {
  background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0) 98.35%
    ),
    url(./images/Proj3.jpg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

#proj4 {
  background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0) 98.35%
    ),
    url(./images/Proj4.jpg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

#proj5 {
  background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0) 98.35%
    ),
    url(./images/Proj5.jpg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

#proj6 {
  background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.6) 0%,
      rgba(0, 0, 0, 0) 98.35%
    ),
    url(./images/Proj6.jpg);
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

.btn {
  font-weight: bold;
  font-size: 16px;
  line-height: 103%;
  text-align: center;
  padding: 22px 0 18px 0;
  color: #ffffff;
  border: 0 solid none;
  border-radius: 60px;
  width: 193px;
  height: 59px;
}

.project-info {
  opacity: 100;
  width: 405px;
  height: 286px;
}

.project-info h3 {
  position: relative;
  top: 20px;
  left: 22px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 22px;
  line-height: 105.3%;
  color: #fff;
}

.technologies {
  position: relative;
  top: 440px;
  left: 25px;
}

.project-btn {
  position: relative;
  top: 480px;
  left: 25px;
  width: 340px;
}

.source-live {
  padding: 20px 38px 20px 38px;
  width: 193px;
  height: 59px;
}

.blue {
  background-color: #4456fb;
}

.blue:hover {
  background-color: #7cb1ff;
}

.red {
  background: #fa4969;
  width: 242px;
}

.grey {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 21px;
  text-align: center;
  border: 0 solid none;
  border-radius: 60px;
  background-color: #555;
  padding: 6px 18px;
}

@media only screen and (min-width: 1024px) {
  .wrapper {
    grid-template-columns: minmax(140px, 1fr) minmax(700px, 10fr) minmax(
        140px,
        1fr
      );
  }
  .nav {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 2;
    grid-row-end: 3;
    flex-direction: column;
    justify-content: flex-start;
    padding: 0 90px;
  }
  .nav ul {
    flex-direction: column;
    padding-inline-start: 0px;
  }
  .hidden {
    display: block;
  }
  .logo {
    background: #4456fb;
    border-radius: 50%;
    width: 86px;
    height: 86px;
    margin: 47px 0 40px 0;
  }
  .initials {
    font-size: 28px;
    line-height: 105.3%;
    padding: 2px 0 0 23px;
  }
  .nav-items a {
    font-weight: 500;
    font-size: 19px;
    line-height: 105%;
    margin: 0 0 0 20px;
  }
}

